--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "dm-alive-tour",
   "version": "0.1.0",
+  "homepage": "http://alivetour.github.io/alivetour",
   "private": true,
   "dependencies": {
     "cra-template": "1.1.2",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.1.1",
@@ -11,6 +13,8 @@
     "sass": "^1.44.0"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
