--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-20.04
+    environment: gh-pages
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
