--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -28,16 +28,19 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-   
 
-      - run: npm ci
-      - run: npm run build
+      - name: Build
+          run: npm ci
+          run: npm run build
+          REACT_APP_SPACE_ID: ${{ secrets.REACT_APP_SPACE_ID }}
+          REACT_APP_CDI: ${{ secrets.REACT_APP_CDI }}
+          REACT_APP_CPAPI: ${{ secrets.REACT_APP_CPAPI }}  
+
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
         env: 
-          REACT_APP_SPACE_ID: ${{ secrets.REACT_APP_SPACE_ID }}
-          REACT_APP_CDI: ${{ secrets.REACT_APP_CDI }}
-          REACT_APP_CPAPI: ${{ secrets.REACT_APP_CPAPI }}   
+ 
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
