--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -28,10 +28,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-   
 
+      run: npm ci
+
       - name: Build
-          run: |
-            npm install
-            npm run build
+          run: npm run build
           env:  
             REACT_APP_SPACE_ID: ${{ secrets.REACT_APP_SPACE_ID }}
             REACT_APP_CDI: ${{ secrets.REACT_APP_CDI }}
