--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-markdown": "^7.1.1",
     "react-scripts": "4.0.3",
     "sass": "^1.44.0"
